# dev-job-notice

./: .env_sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
apis/filters/: apps.py  models.py
apis/filters/migrations/: 0001_initial.py
apis/jobs/: apps.py  models.py
apis/jobs/migrations/: 0001_initial.py
apis/notifications/: models.py
apis/notifications/migrations/: 0001_initial.py  0002_initial.py
apis/users/: managers.py  models.py  urls.py
apis/users/migrations/: 0001_initial.py
config/: urls.py  wsgi.py
config/django/: base.py  dev.py  local.py  prod.py
config/settings/swagger/: settings.py  setup.py
core/: authentication.py  constants.py  exception.py  models.py  monitor.py  pagination.py  permissions.py  response.py  swagger.py  view.py
core/aws/: s3.py
deploy/: crontab.sh  deploy.py
deploy/dev/django/: django.dockerfile  gunicorn.conf.py  run.sh
deploy/local/django/: gunicorn.conf.py  settings.sh
deploy/prod/django/: django.dockerfile  gunicorn.conf.py  run.sh
requirements/: common.txt
